# aoc15

./: LICENSE  aoc15.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
